<resources>
    <string name="app_name">ProgressMonitor</string>
    <string name="version_name">Application version: %1$s</string>
    <string name="network_status_online">Connected to the network</string>
    <string name="network_status_offline">Disconnected from the network</string>
    <string name="promo_request_too_large">The download file is too large</string>
    <string name="project_title">Projects</string>
    <string name="save">Save</string>
    <string name="structure_scheme">Structural scheme:</string>
    <string name="post_spinner_change_employee">Select employee</string>
    <string name="post_checkbox_change_employees">Select employees</string>
    <string name="post_employee">Employee</string>
    <string name="post_superior">Superior</string>
    <string name="post_name">Position</string>
    <string name="post_example_name">Job title</string>
    <string name="post_not_assigned">Not assigned</string>
    <string name="post_current_assignment_table">Current assignment table</string>
    <string name="post_appoint_post">Appoint a post</string>
    <string name="post_cancel_appointment">Cancel appointment</string>
    <string name="post_change_parent">Transfer employees to another manager</string>
    <string name="post_to_appoint">To appoint</string>
    <string name="post_appoint_chief_executive">Appoint a chief executive</string>
    <string name="post_select_chief_executive">Select a chief executive</string>
    <string name="post_example_senior_manager">Senior manager</string>
    <string name="post_example_general_manager">General Director</string>
    <string name="prompt_change_superior">Choose a leader</string>
    <string name="prompt_change_new_superior">Choose a new leader</string>
    <string name="post_instruction_chief">It is necessary to determine the main leader, who will be the first, top element of the organizations structural diagram:</string>
    <string name="post_instruction_employee">After selecting an employee from the first list, enter the name of his position, and select his immediate supervisor from the second list of employees:</string>
    <string name="post_instruction_change_parent">For vacation time or for any other reason, you can assign a group of employees to another manager. To do this, select the current leader, in the list of his subordinates, select the employees to be moved, and select a new leader for them</string>
    <string name="post_instruction_deleting">The selected employee ceases to be associated with the immediate supervisor, and for everyone for whom he was the immediate supervisor, if necessary, establish a new immediate supervisor, otherwise they will not be visible on the structural diagram (since they will be tied to an employee who does not have a position in the diagram):</string>
    <string name="post_not_yourself">Not yourself</string>
    <string name="post_actual_parent">The current leader:</string>
    <string name="post_new_parent">New leader:</string>
    <string name="immediate_superior">Immediate superior</string>
    <string name="personal_plans">Personal</string>
    <string name="group_plans">Group</string>
    <string name="select_plan">Choose a plan</string>
    <string name="rejected">Rejected</string>
    <string name="not_accepted">Not set</string>
    <string name="control_child_plan">Controllability of the plans of subordinates</string>
    <string name="select_period_statistic_plan">Select period</string>
    <string name="select_period_week">Week</string>
    <string name="select_period_month">Month</string>
    <string name="select_period_six_months">Six months</string>
    <string name="title_personal_stat">Personal statistics</string>
    <string name="index">Index</string>
    <string name="value">Value</string>
    <string name="value_h_m">H : m</string>
    <string name="units">Units</string>
    <string name="percent">%</string>
    <string name="number_all_plan">Planned:\u0020</string>
    <string name="number_completed_plan">Completed:\u0020</string>
    <string name="number_incomplete_plan">Incomplete:\u0020</string>
    <string name="number_rejected_plan">Rejected:\u0020</string>
    <string name="title_subordinate_stat">Subordinate statistics</string>
    <string name="number_child_employees">Subordinates:\u0020</string>
    <string name="employees">(employees: </string>
    <string name="relative_indicators">Relative indicators:</string>
    <string name="planning_rate">Planning rate:</string>
    <string name="actual_planning">Actual planning:</string>
    <string name="actual_execution">Actual execution:</string>
    <string name="hint_planning_rate">(All scheduled group time for the period / Number of employees)</string>
    <string name="hint_actual_planning">(Planned / Planning rate)</string>
    <string name="hint_actual_execution">(Completed / Planning rate)</string>
    <string name="hint_planning_rate_sub">(Group planning rate * Number of subordinates)</string>
    <string name="notification_channel_id_foreground">foreground_notifications</string>
    <string name="notification_channel_id_push">push_notifications</string>
    <string name="default_notification_channel_id">push_notifications</string>
    <string name="notification_channel_name_foreground">Service notifications</string>
    <string name="notification_channel_name_push">Incoming notifications</string>
    <string name="notification_channel_description_foreground">Synchronization status notifications, network etc.</string>
    <string name="notification_channel_description_push">Notifications about incoming tasks and other events</string>
    <string name="tasks">Tasks</string>
    <string name="plans">Plans</string>
    <string name="incoming">Inbox</string>
    <string name="outbox">Outbox</string>
    <string name="other">Other</string>
    <string name="sort_active">ACTIVE</string>
    <string name="sort_archive">ARCHIVE</string>
    <string name="sort_inactive">COMPLETED</string>
    <string name="sort_canceled">CANCELED</string>
    <string name="sort_open">OPEN</string>
    <string name="sort_closed">COMPLETED</string>
    <string name="alert_dialog_button_positive">Yes</string>
    <string name="alert_dialog_button_negative">Not</string>
    <string name="alert_dialog_mess_success_non_details">Successfully completed</string>
    <string name="alert_dialog_mess_success_add_user">User added successfully, password sent via SMS</string>
    <string name="alert_dialog_mess_success_add_user_send_sms">User added. Login: %1$s, password: %2$s. Send him his password in SMS?</string>
    <string name="alert_dialog_mess_success_rewrite_password_send_sms">Password changed. Login: %1$s, new password: %2$s. Send this data to yourself in SMS?</string>
    <string name="alert_dialog_mess_success_create_group_password_send_sms">The group has been created. Your administrator login: %1$s, password: %2$s. Send this data to yourself in SMS?</string>
    <string name="alert_dialog_mess_fail_create_group">Failed to create group, please try again later</string>
    <string name="alert_dialog_mess_add_user_send_sms_content">ProgressMonitor: login: %1$s, password: %2$s</string>
    <string name="alert_dialog_mess_add_user_send_sms_not_available">Sending sms is not available</string>
    <string name="alert_dialog_mess_success_delete_user">User deleted successfully</string>
    <string name="alert_dialog_mess_delete_task">Delete task?</string>
    <string name="alert_dialog_mess_reject_plan">Reject plan item?</string>
    <string name="alert_dialog_mess_delete_plan">Delete plan item?</string>
    <string name="alert_dialog_mess_fail_phone_or_password">Invalid number or password</string>
    <string name="alert_dialog_mess_user_not_found">User with this number does not exist</string>
    <string name="alert_dialog_mess_fail_cut">Something is wrong, please try again later, or inform the administrator</string>
    <string name="alert_dialog_mess_fail_full">Something is wrong, check the internet, try again later, or inform the administrator</string>
    <string name="alert_dialog_mess_connect_fail">Connection problems, check the internet, try again later, or inform the administrator</string>
    <string name="billing_success">Payment was successful, full access to the group was obtained</string>
    <string name="billing_fail">Problems with the payment service, please try again later</string>
    <string name="billing_user_canceled">You refused to pay</string>
    <string name="billing_fail_refund">Problems with the payment service, please try again later, if the problem persists, the payment will be automatically refunded within 3 days</string>
    <string name="success_synchronized">Synchronized: </string>
    <string name="fail_synchronized">Sync failure: </string>
    <string name="new_task_notification">Incoming new task</string>
    <string name="alert_dialog_mess_delete_user">The tasks created by him will also be deleted, continue?</string>
    <string name="alert_dialog_mess_you_deleted">You were dropped from the group</string>
    <string name="alert_dialog_mess_group_blocked">Trial period expired</string>
    <string name="alert_dialog_mess_group_not_found">Group not found</string>
    <string name="alert_dialog_mess_set_another_admin">Your administrator rights will be transferred to the selected user, continue?</string>
    <string name="hint_task_from">Creator:</string>
    <string name="hint_task_for">Recipient:</string>
    <string name="hint_task_desc">Description of the task:</string>
    <string name="hint_task_status">Task status:</string>
    <string name="hint_task_time_limit">Period of execution:</string>
    <string name="hint_task_created">The task was created:</string>
    <string name="hint_task_updated">Task changed:</string>
    <string name="hint_task_recycler_view">Task list</string>
    <string name="hint_question_recycler_view">Question list</string>
    <string name="example_phone_number">Example: +1XXXXXXXXXXX</string>
    <string name="status_task_active">Active</string>
    <string name="status_task_inactive">Completed</string>
    <string name="status_task_canceled">Canceled</string>
    <string name="task_title_default">Title</string>
    <string name="task_desc">%s</string>
    <string name="task_from">%s</string>
    <string name="for_fio">For whom: %s</string>
    <string name="delete">Delete</string>
    <string name="help">Help</string>
    <string name="activate">Activate</string>
    <string name="deactivate">Cancel</string>
    <string name="done">Performed</string>
    <string name="hint_tvDate">Select date</string>
    <string name="title_login_screen">Join the group</string>
    <string name="create_group_hint"><u>Create a new group</u></string>
    <string name="task_recipient">Task recipient:</string>
    <string name="change_recipient">Select task executor:</string>
    <string name="change_task_limit">Enter due date:</string>
    <string name="enter_task_desc">Enter task description:</string>
    <string name="task_desc_hint">Task description:</string>
    <string name="name_company">Group:</string>
    <string name="name_company_length">Maximum 20 characters</string>
    <string name="name_admin">Enter surname, name</string>
    <string name="name_admin_hint">Example: Smith.J.</string>
    <string name="restore_pass_phone_num_hint">Enter your phone number</string>
    <string name="restore_pass_sms_code_hint">Enter code from SMS</string>
    <string name="restore_pass_step1">Step 1</string>
    <string name="restore_pass_step2">Step 2</string>
    <string name="send_phone">Send number</string>
    <string name="send_code">Send code</string>
    <string name="sms_should_minute">SMS should come within a minute, if not received:</string>
    <string name="get_code_again"><u>Request SMS - code again</u></string>
    <string name="create_group_btn">To create a group</string>
    <string name="prompt_change_user">Select user</string>
</resources>