<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".group.RestorePassActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top"
        tools:layout_editor_absoluteY="59dp"
        tools:layout_editor_absoluteX="50dp">


        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <ScrollView
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">


        <TextView
            android:id="@+id/step1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginStart="5dp"
            android:textSize="24sp"
            android:textColor="@color/colorAccent"
            android:text="@string/restore_pass_step1"/>


        <EditText android:id="@+id/login_sms_phone_num"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:cursorVisible="true"
            android:hint="@string/restore_pass_phone_num_hint"
            android:inputType="phone"
            android:imeOptions="actionDone"
            android:layout_marginTop="10dp"
            android:singleLine="true"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="5dp"
            android:text="@string/example_phone_number" />


        <Button android:id="@+id/login_sms_phone_btn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/send_phone"
            android:onClick="sendPhoneOnclick" />


        <View
            android:layout_width="fill_parent"
            android:layout_height="2.8dp"
            android:id="@+id/separator2"
            android:layout_gravity="center_horizontal"
            android:visibility="visible"
            android:layout_margin="20dp"
            android:background="@android:color/darker_gray"/>


        <TextView
            android:id="@+id/step2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10sp"
            android:layout_marginStart="5sp"
            android:textSize="24sp"
            android:textColor="@color/colorAccent"
            android:text="@string/restore_pass_step2"/>


        <EditText android:id="@+id/login_sms_code"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:cursorVisible="true"
            android:inputType="number"
            android:hint="@string/restore_pass_sms_code_hint"
            android:imeOptions="actionDone"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:importantForAutofill="no" />

        <Button android:id="@+id/login_sms_code_btn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/send_code"
            android:onClick="sendSmsCodeOnclick" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2.8dp"
            android:id="@+id/separator"
            android:layout_gravity="center_horizontal"
            android:visibility="visible"
            android:layout_margin="20dp"
            android:background="@android:color/darker_gray"/>


        <TextView
            android:id="@+id/wait_one_minutes"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:textSize="14sp"
            android:textColor="@color/colorGrey"
            android:text="@string/sms_should_minute"/>


        <TextView
            android:id="@+id/link_return_step1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/get_code_again"/>

    </LinearLayout>


</ScrollView>



<!--
        <Button android:id="@+id/login_sms_sign_out_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:text="Выйти"
            android:onClick="signOutOnclick" />
-->


    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>